--- a/_config.yaml
+++ b/_config.yaml
@@ -1,4 +1,4 @@
-theme: minima
+theme: null
 title: Dinesh Devaraj's Portfolio
 description: About me - Guidewire InsuranceSuite Developer
 url: "https://dineshdeva.github.io"
